@@ -1,3 +1,8 @@
+2006-01-04  Anthony Balkissoon  <abalkiss@redhat.com>
+
+	* gnu/testlet/javax/swing/text/DefaultStyledDocument/ElementBuffer/ElementStructure4.java: New test.
+	* gnu/testlet/javax/swing/text/DefaultStyledDocument/ElementBuffer/ElementStructure5.java: New test.
+
 2006-01-04  Gary Benson <gbenson@redhat.com>
 
 	* gnu/testlet/java/io/ObjectInputStream/security.java: New test.
